--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm install --save --legacy-peer-deps  react-tilt, vite",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -14,8 +14,8 @@
     "@react-three/fiber": "^8.11.9",
     "framer-motion": "^10.2.3",
     "maath": "^0.5.2",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.114",
     "react-router-dom": "^6.8.2",
     "react-tilt": "^0.1.4",
@@ -23,8 +23,8 @@
     "three": "^0.150.1"
   },
   "devDependencies": {
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^15.0.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
