--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/fiber": "^8.11.9",
     "framer-motion": "^10.2.3",
     "maath": "^0.5.2",
-    "react": "^18.2.0",
+    "react": "^15.0.0 || ^16.0.0-beta || ^16.0.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.114",
     "react-router-dom": "^6.8.2",
