--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
-    "framer-motion": "^9.0.7",
+    "framer-motion": "6.1.0",
     "maath": "^0.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.0.0-beta",
+    "react-dom": "^16.0.0-beta",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
