--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "6.1.0",
     "maath": "^0.5.2",
-    "react": "^16.0.0-beta || ^17.0.0 || ^18.0.0",
+    "react": "^16.0.0-beta",
     "react-dom": "^16.0.0-beta",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^0.1.4",
