--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
-    "@react-three/drei": "^9.56.24",
+    "@react-three/drei": "9.8.2",
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "6.1.0",
     "maath": "^0.5.2",
